# VCTCareer

./: .env.act  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  GITHUB_ACTIONS_TESTING.md  package-lock.json  package.json  rsbuild.config.mjs
.github/workflows/: cargo-tests.yml  frontend-tests.yml  full-ci.yml  main-ci.yml  pr-ci.yml  rust-tests.yml
VCTCareerBackend/: .env  Cargo.toml
VCTCareerBackend/examples/: buy_system_showcase.rs  debug_buy_system.rs  dynamic_buy_system_example.rs  legacy_sim_example.rs  modern_simulation_example.rs  neural_buy_system_example.rs  salary_example.rs  sim_example.rs  simulation_manager_example.rs
VCTCareerBackend/src/: db.rs  lib.rs  main.rs  models.rs  offers.rs  ranked.rs  region_offer_extrema.json  sim.rs  simulation_manager.rs
VCTCareerBackend/tests/: dynamic_buy_system_tests.rs  sim_tests.rs  simulation_manager_tests.rs
VCTCareerFrontend/src/: App.css  App.jsx
VCTCareerFrontend/src/components/common/: navbar.jsx
VCTCareerFrontend/src/components/landing/: modal.jsx
VCTCareerFrontend/src/pages/career/: career.jsx
VCTCareerFrontend/src/pages/landing/: landing.jsx
scripts/: test-github-actions.sh
src/: App.css  App.jsx
src/components/common/: navbar.jsx
src/pages/landing/: landing.jsx
