[package]
name = "vctcareer_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
log = "0.4.27"
rand = "0.9.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-postgres = "0.7.13"
utoipa = { version = "5.3.1", features = [] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
crossterm = "0.28"
ratatui = "0.29"

# Machine Learning with Candle
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"

[[example]]
name = "simulation_manager_example"
path = "examples/simulation_manager_example.rs"

[[example]]
name = "neural_buy_system_example"
path = "examples/neural_buy_system_example.rs"

